src/test/resources/de/uni_luebeck/isp/tessla/interpreter/tests/errors/warnings.warnings
/errors/warnings.tessla(1,1 - 1,7): The keyword 'define' is deprecated, use 'def' instead
/errors/warnings.tessla(5,5 - 5,7): Conflicting out declaration (previous declaration at /errors/warnings.tessla(4,5 - 4,7))
/errors/warnings.tessla(7,5 - 7,11): Conflicting out declaration (previous declaration at /errors/warnings.tessla(6,5 - 6,11))
/errors/warnings.tessla(11,5 - 11,7): Expressions at the end of a block are deprecated - use where or return instead